--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 class="card-img-top"
                 alt="..."
               />
-              <div class="card-body"></div>
+              <!-- <div class="card-body"></div> -->
             </div>
           </div>
         </div>
@@ -99,10 +99,11 @@
     <!-- voice -->
     <section id="voice">
       <div class="container mt-5">
+        h1>Memorable Encounter</h1>
         <div class="row">
           <div class="col-md-6 offset-md-3">
             <div class="text-center">
-              <h1>Memorable Encounter</h1>
+              <
               <div id="playButton">
                 <span class="star-icon"></span>
                 <audio
