--- a/index.html
+++ b/index.html
@@ -99,11 +99,11 @@
     <!-- voice -->
     <section id="voice">
       <div class="container mt-5">
-        h1>Memorable Encounter</h1>
+        <h1>Memorable Encounter</h1>
         <div class="row">
           <div class="col-md-6 offset-md-3">
             <div class="text-center">
-              <
+              
               <div id="playButton">
                 <span class="star-icon"></span>
                 <audio
