--- a/index.html
+++ b/index.html
@@ -98,12 +98,11 @@
     </section>
     <!-- voice -->
     <section id="voice">
+      <h1 style="color: bisque">Memorable Encounter</h1>
       <div class="container mt-5">
-        <h1>Memorable Encounter</h1>
         <div class="row">
           <div class="col-md-6 offset-md-3">
             <div class="text-center">
-              
               <div id="playButton">
                 <span class="star-icon"></span>
                 <audio
@@ -123,7 +122,7 @@
         <img
           src="css/img/photo-1464347601390-25e2842a37f7.jpeg"
           class="card-img"
-          alt="..."
+          alt="img"
         />
         <div class="card-img-overlay">
           <h5 class="card-title"></h5>
